--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "js-chess-engine": "^0.11.0",
+    "mongoose": "^5.12.2",
     "multer": "^1.4.2"
   }
 }
